third_party/move/move-compiler-v2/tests/checking/positional_fields/constructor_invalid1.move
module 0x42::test {
    struct S(u8, bool);

    fun foo() {
        S { _0: 42, _1: 42 };
    }
}
